[package]
name = "pdf-to-whatever"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]
license = "WTFPL"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
hayro = "0.4.0"
hayro-interpret = "0.4.0"
humansize = "2.1.3"
image = "0.25.8"
once_cell = "1.21.3"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob", "CssStyleDeclaration"] }
web-time = "1.1.0"
yew = { version = "0.21.0", features = ["csr"] }
